[refactor] refactor SecurityConfig.java